fix the bug: Center map geolocation is no longer hardcoded When user go back to live-watch component, he can still see the path of the current walking one In live-watch component, in ComponentDidMount() lifecycle, send a post request to backend, hit the route 'api/routes/user_id', postBody will be 'status=ongoing', so the backend will return the on-going walk geolocation to frontend, the map component can render the path on map backend, in the router, create a new postrouter called /routes/fetch-by-status, will fetch the routes in database based on the routes status passed by in post body Lower the update frequency of geolocation. So the drawing line won't be to jagged (NOT DONE YET) set overflow-y: hidden on the home body. so no scorll bar tested and working apply the same logic to walker, when walker open the map, (walker-map.jsx) the open route is reloaded and display on the map as well rewrite the query so it understands it's the walker or the owner that fetching the route linked the home live-walker button to the /live-walk router set the status in app about current route and user type give friendly notice when no open route is avaiable , in map component

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Fredoka One', cursive;
     height: 100vh;
     background-color: black;
+    overflow-y: hidden;
 
 }
 
